--- a/PoC/poc-monitoring.html
+++ b/PoC/poc-monitoring.html
@@ -460,7 +460,7 @@
         <div class="house-section" id="ethiopia-a">
             <div class="house-header">
                 <div class="house-header-left">
-                    <div class="house-title">에티오피아 A동</div>
+                    <div class="house-title">대만 四福芳裕雞場 1동</div>
                     <a class="poc-link" href="./poc-monitoring.html#ethiopia-a" target="_blank" rel="noopener noreferrer">PoC 페이지 이동</a>
                 </div>
                 <div class="house-status status-normal">정상 운영</div>
@@ -474,7 +474,7 @@
                             CCTV 1-1
                         </div>
                     </div>
-                    <img src="./1.png" alt="동 1 CCTV" class="stream-video">
+                    <img src="./1.png" alt="1동 CCTV" class="stream-video">
                     <div class="stream-controls">
                         <button class="control-btn btn-入추">입추</button>
                         <button class="control-btn btn-出하">출하</button>
@@ -523,7 +523,7 @@
         <div class="house-section" id="ethiopia-b">
             <div class="house-header">
                 <div class="house-header-left">
-                    <div class="house-title">에티오피아 B동</div>
+                    <div class="house-title">대만 大成潮州場 1동</div>
                     <a class="poc-link" href="./poc-monitoring.html#ethiopia-b" target="_blank" rel="noopener noreferrer">PoC 페이지 이동</a>
                 </div>
                 <div class="house-status status-warning">확인 필요</div>
@@ -536,7 +536,7 @@
                             CCTV 2-1
                         </div>
                     </div>
-                    <img src="./2.png" alt="동 2 CCTV" class="stream-video">
+                    <img src="./2.png" alt="1동 CCTV" class="stream-video">
                     <div class="stream-controls">
                         <button class="control-btn btn-入추">입추</button>
                         <button class="control-btn btn-出하">출하</button>
@@ -588,7 +588,7 @@
         <div class="house-section" id="vietnam-1">
             <div class="house-header">
                 <div class="house-header-left">
-                    <div class="house-title">베트남 1동</div>
+                    <div class="house-title">대만 紅橋畜牧場（Red bridge） 1동</div>
                     <a class="poc-link" href="./poc-monitoring.html#vietnam-1" target="_blank" rel="noopener noreferrer">PoC 페이지 이동</a>
                 </div>
                 <div class="house-status status-warning">확인 필요</div>
@@ -601,7 +601,7 @@
                             CCTV 3-1
                         </div>
                     </div>
-                    <img src="./3.png" alt="동 3 CCTV" class="stream-video">
+                    <img src="./3.png" alt="1동 CCTV" class="stream-video">
                     <div class="stream-controls">
                         <button class="control-btn btn-入추">입추</button>
                         <button class="control-btn btn-出하">출하</button>
@@ -657,7 +657,7 @@
         <div class="house-section" id="thailand-a">
             <div class="house-header">
                 <div class="house-header-left">
-                    <div class="house-title">태국 A동</div>
+                    <div class="house-title">태국 ChampaHomFarm 1동</div>
                     <a class="poc-link" href="./poc-monitoring.html#thailand-a" target="_blank" rel="noopener noreferrer">PoC 페이지 이동</a>
                 </div>
                 <div class="house-status status-warning">확인 필요</div>
@@ -671,7 +671,7 @@
                         </div>
                     </div>
                     <div class="offline-video-wrapper">
-                        <img src="./4.png" alt="동 4 CCTV" class="stream-video">
+                        <img src="./4.png" alt="1동 CCTV" class="stream-video">
                         <div class="offline-overlay">
                             <div>스트리밍 중단</div>
                         </div>
@@ -723,65 +723,6 @@
             </div>
         </div>
 
-        <!-- 동 5: 정상 -->
-        <div class="house-section" id="indonesia-1">
-            <div class="house-header">
-                <div class="house-header-left">
-                    <div class="house-title">인도네시아 1동</div>
-                    <a class="poc-link" href="./poc-monitoring.html#indonesia-1" target="_blank" rel="noopener noreferrer">PoC 페이지 이동</a>
-                </div>
-                <div class="house-status status-normal">정상 운영</div>
-            </div>
-            <div class="monitoring-grid">
-                <div class="live-stream">
-                    <div class="stream-header">
-                        <div class="stream-title">
-                            <span class="live-badge">LIVE</span>
-                            CCTV 5-1
-                        </div>
-                    </div>
-                    <img src="./5.png" alt="동 5 CCTV" class="stream-video">
-                    <div class="stream-controls">
-                        <button class="control-btn btn-入추">입추</button>
-                        <button class="control-btn btn-出하">출하</button>
-                    </div>
-                </div>
-
-                <div class="sensor-status">
-                    <div class="sensor-header">센서 상태</div>
-                    <div class="sensor-list">
-                        <div class="sensor-item">
-                            <div class="sensor-indicator active"></div>
-                            <span class="sensor-name">사료빈 센서</span>
-                        </div>
-                        <div class="sensor-item">
-                            <div class="sensor-indicator active"></div>
-                            <span class="sensor-name">온습도 센서</span>
-                        </div>
-                        <div class="sensor-item">
-                            <div class="sensor-indicator active"></div>
-                            <span class="sensor-name">체중계</span>
-                        </div>
-                        <div class="sensor-item">
-                            <div class="sensor-indicator active"></div>
-                            <span class="sensor-name">CCTV</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="alert-log">
-                    <div class="alert-header">
-                        알림 로그
-                    </div>
-                    <div class="alert-empty">
-                        <svg fill="currentColor" viewBox="0 0 20 20">
-                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
-                        </svg>
-                        <div>정상 운영 중</div>
-                    </div>
-                </div>
-            </div>
-        </div>
         </div>
     </div>
 
